# termtris

./: .gitignore  CMakeLists.txt  README.md  debugger_start  project_start
src/: main.cpp
src/core/: closecore.cpp  closecore.hpp  conscore.cpp  conscore.hpp  curscore.cpp  curscore.hpp  sigcore.cpp  sigcore.hpp
src/game/: field.cpp  field.hpp  figure.cpp  figure.hpp  init.cpp  init.hpp  logic.cpp  logic.hpp
src/graphic/: draw.cpp  draw.hpp  graphic.cpp  graphic.hpp  screen.cpp  screen.hpp
src/include/: colors.hpp
src/soloheader/: shape.hpp  symbols.hpp
