# Указываем минимальную версию CMake
cmake_minimum_required(VERSION 3.15)

project(MyProject)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_compile_options(
    -Wall -Wextra -pedantic
)

include_directories(src/include)
include_directories(src/core)
include_directories(src/game)
include_directories(src/graphic)

file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/main.cpp")
file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/**/*.cpp")

# Создаем исполняемый файл
add_executable(${PROJECT_NAME} src/main.cpp ${SOURCES})
message("PROJECT_SOURCE_DIR: ${SOURCES}")

# Если нужно, можно добавить дополнительные библиотеки или зависимости
target_link_libraries(${PROJECT_NAME} ncursesw)

